--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql-tag": "^2.10.3",
     "nuxt": "^2.0.0",
     "reading-time": "^1.2.0",
+    "redirect-ssl": "^1.4.1",
     "text-readability": "^1.0.5",
     "universal-dom-parser": "^0.0.3",
     "vue2-medium-editor": "^1.1.6"
