--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "text-readability": "^1.0.5",
     "universal-dom-parser": "^0.0.3",
     "vue-debounce": "^2.5.5",
+    "vue-timeago": "^5.1.2",
     "vue2-medium-editor": "^1.1.6"
   },
   "devDependencies": {
