--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@nuxtjs/apollo": "^4.0.0-rc19",
     "@nuxtjs/axios": "^5.10.3",
+    "@nuxtjs/proxy": "^2.0.0",
     "apollo-cache-inmemory": "^1.6.5",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
