--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@nuxtjs/apollo": "^4.0.0-rc19",
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/proxy": "^2.0.0",
     "apollo-cache-inmemory": "^1.6.5",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
+    "cookieparser": "^0.1.0",
     "core-js": "@2.6.10",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
     "reading-time": "^1.2.0",
     "redirect-ssl": "^1.4.1",
