--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "universal-dom-parser": "^0.0.3",
     "vue-debounce": "^2.5.5",
     "vue-timeago": "^5.1.2",
-    "vue2-medium-editor": "^1.1.6"
+    "vue2-medium-editor": "^1.1.6",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
