--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/proxy": "^2.0.0",
     "@nuxtjs/vuetify": "^1.0.0",
     "apollo-cache-inmemory": "^1.6.5",
