add global scss, fonts, design changes

--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "core-js": "@2.6.10",
+    "fibers": "^5.0.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "nuxt": "^2.0.0",
     "reading-time": "^1.2.0",
     "redirect-ssl": "^1.4.1",
+    "sass-loader": "^10.1.1",
     "slugify": "^1.4.0",
     "text-readability": "^1.0.5",
     "universal-dom-parser": "^0.0.3",
