--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "fibers": "^5.0.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "highcharts": "^9.0.1",
+    "highcharts-vue": "^1.3.5",
     "nuxt": "^2.0.0",
     "reading-time": "^1.2.0",
     "redirect-ssl": "^1.4.1",
