--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "highcharts": "^9.0.1",
     "highcharts-vue": "^1.3.5",
     "nuxt": "^2.0.0",
+    "portal-vue": "^2.1.7",
     "reading-time": "^1.2.0",
     "redirect-ssl": "^1.4.1",
     "sass-loader": "^10.1.1",
