--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "slugify": "^1.4.0",
     "text-readability": "^1.0.5",
     "universal-dom-parser": "^0.0.3",
+    "v-calendar": "^2.3.0",
     "vue-debounce": "^2.5.5",
     "vue-timeago": "^5.1.2",
     "vue2-medium-editor": "^1.1.6",
