--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Nikomi, LLC",
   "private": true,
   "scripts": {
+    "ci": "cypress run-ct && cypress run",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -48,12 +49,16 @@
     "vuelidate": "^0.7.6"
   },
   "devDependencies": {
+    "@cypress/vue": "^2.2.2",
+    "@cypress/webpack-dev-server": "^1.1.6",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
+    "cypress": "^7.2.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.1.0",
     "prettier": "^1.19.1",
-    "vue-jest": "^4.0.0-0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
