--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,6 +20,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      nginx:
+        image: nginx
+        # Map port 8080 on the Docker host to port 80 on the nginx container
+        ports:
+          - 3000:3000
+
     strategy:
       matrix:
         node-version: [15.x]
