--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: cypress-io/github-action@v2
         with:
+          build: yarn build
+          start: yarn start
+          wait-on: 'http://localhost:3000'
           browser: chrome
           spec: |
             cypress/integration/**/*.spec.js
