--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -1,4 +1,4 @@
-name: E2E on Chrome
+name: Cypress
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 jobs:
   cypress-e2e-tests:
     runs-on: ubuntu-20.04
-    name: E2E tests (Chrome)
+    name: End-to-end tests (Chrome)
     steps:
       - uses: actions/checkout@v2
       - uses: cypress-io/github-action@v2
@@ -18,7 +18,7 @@ jobs:
           start: yarn start
           wait-on: 'http://localhost:3000'
           browser: chrome
-          spec: cypress/integration/**/*.spec.js
+          spec: 'cypress/integration/**/*.spec.js'
         env:
           API_URL: https://dev.api.editori.io
           BACKEND_URL: https://dev.api.editori.io/graphql
@@ -37,7 +37,7 @@ jobs:
           start: yarn start
           wait-on: 'http://localhost:3000'
           browser: chrome
-          spec: components/**/*.spec.js
+          spec: 'components/**/*.spec.js'
         env:
           API_URL: https://dev.api.editori.io
           BACKEND_URL: https://dev.api.editori.io/graphql
