Hard code test spec path for testing

--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -37,7 +37,7 @@ jobs:
           start: yarn start
           wait-on: 'http://localhost:3000'
           browser: chrome
-          spec: cypress/components/**/*.spec.js
+          spec: cypress/components/layout/Navbar.spec.js
         env:
           API_URL: https://dev.api.editori.io
           BACKEND_URL: https://dev.api.editori.io/graphql
