--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -18,7 +18,7 @@ jobs:
           start: yarn start
           wait-on: 'http://localhost:3000'
           browser: chrome
-          spec: cypress/integration/**/*.spec.js
+          config-file: cypress-e2e.json
         env:
           API_URL: https://dev.api.editori.io
           BACKEND_URL: https://dev.api.editori.io/graphql
@@ -37,7 +37,7 @@ jobs:
           start: yarn start
           wait-on: 'http://localhost:3000'
           browser: chrome
-          spec: cypress/components/layout/Navbar.spec.js
+          config-file: cypress-components.json
         env:
           API_URL: https://dev.api.editori.io
           BACKEND_URL: https://dev.api.editori.io/graphql
