--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           build: yarn build
           start: yarn start
+          command: yarn cypress run-ct
           wait-on: 'http://localhost:3000'
           browser: chrome
           config-file: cypress-components.json
