--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest",
+    "test": "cypress run && cypress run-ct",
     "heroku-postbuild": "nuxt build"
   },
   "dependencies": {
