--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "graphql-tag": "^2.10.3",
     "highcharts": "^9.0.1",
     "highcharts-vue": "^1.3.5",
+    "material-icons": "^0.6.3",
     "nuxt": "^2.0.0",
     "portal-vue": "^2.1.7",
     "reading-time": "^1.2.0",
@@ -45,7 +46,8 @@
     "vue-debounce": "^2.5.5",
     "vue-timeago": "^5.1.2",
     "vue2-medium-editor": "^1.1.6",
-    "vuelidate": "^0.7.6"
+    "vuelidate": "^0.7.6",
+    "vuesax": "^3.12.2"
   },
   "devDependencies": {
     "@cypress/vue": "^2.2.2",
