add vue-stepper, fix vuex error, fix button and textfield

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "universal-dom-parser": "^0.0.3",
     "v-calendar": "^2.3.0",
     "vue-debounce": "^2.5.5",
+    "vue-stepper": "^1.4.2",
     "vue-timeago": "^5.1.2",
     "vue2-medium-editor": "^1.1.6",
     "vuelidate": "^0.7.6",
